calendar width fix and legend realignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,7 +393,7 @@ footer .container .copyright {
 
 #contribution-calendar {
     background: var(--background);
-    width: 720px;
+    width: 705px;
     height: fit-content;
     margin-left: 10px;
 }
